pss/privileged-containers/resource.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-version
spec:
  containers:
  - name: nginx
    image: nginx:1.14.1
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: busybox
    image: busybox
    securityContext:
      privileged: true
